# EE5271-Final-Project-AFNR

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
launch/: detector_launch.py
underwater_detector/: detector_node.py  loco_pose_node.py  target_pose_node.py
underwater_detector/models/: best.onnx
underwater_detector_ros1/: CMakeLists.txt  package.xml
underwater_detector_ros1/launch/: detector.launch
underwater_detector_ros1/models/: best.onnx
underwater_detector_ros1/scripts/: detector_node.py  loco_pose_node.py  navigate_node.py  target_pose_node.py
