<?xml version="1.0"?>
<package format="2">
  <name>underwater_detector</name>
  <version>0.0.1</version>
  <description>YOLOv9 underwater object detector for ROS1 Melodic</description>
  <maintainer email="hossa168@umn.edu">AmreenHossain</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>loco_pilot</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

</package>
